feat: :sparkles: Se agrego la estructura html
Se realizó la estructura a la cual se le aplicará el diseño correspondiente

--- a/index.html
+++ b/index.html
@@ -1,14 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Lover</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="storage/img/logo.png" type="image/png">
-    <!-- <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
-    
+    <div class="page1">
+        <header>
+            <div class="menu">
+                <p>home</p>
+                <p>about</p>
+                <p>menus</p>
+                <p>offers</p>
+                <div class="logo">
+                    <img src="storage/img/logo.png" alt="logo">
+                </div>
+                <p>gallery</p>
+                <p>contact</p>
+                <p>blog</p>
+            </div>
+        </header>
+        <main>
+            <div class="img"><img src="storage/img/placeYourImageHere1.png" alt=""></div>
+            <div class="contain">
+                <h2>Contact Us For Best Breakfast</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium harum odio deserunt earum amet
+                    at animi voluptatem quo! In rerum explicabo, vero debitis magnam neque sit non voluptate saepe modi!
+                    Minima alias vitae deserunt iusto velit quae, adipisci a cupiditate totam quas corrupti impedit
+                </p>
+                <button>Contact Us</button>
+            </div>
+        </main>
+    </div>
+    <div class="page2">
+        <div class="box1">
+            <div class="img"><img src="storage/img/placeYourImageHereGaleria0.png" alt=""></div>
+            <div class="text">
+                <h4>About Us</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus repudiandae architecto in doloribus
+                    eos fugit similique vel, veniam delectus cupiditate harum consequuntur alias quibusdam incidunt
+                    distinctio sapiente hic nesciunt amet?</p>
+            </div>
+        </div>
+        <div class="box2">
+            <div class="img"><img src="storage/img/placeYourImageHereFood0.png" alt=""></div>
+            <div class="text">
+                <h4>Our Food Quality</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia, nesciunt esse? Fuga commodi est
+                    accusamus, ipsam in asperiores eum ipsa? Expedita quibusdam veniam recusandae error velit obcaecati
+                    asperiores. Sunt, voluptas?
+                </p>
+            </div>
+        </div>
+        <div class="box3">
+            <div class="img1"><img src="storage/img/placeYourImageHereFood1.png" alt=""></div>
+            <div class="img2"><img src="storage/img/placeYourImageHereFood3.png" alt=""></div>
+        </div>
+    </div>
+    <div class="page3">
+        <header>
+            <h3>Our Food Gallery</h3>
+        </header>
+        <main>
+            <div class="imgbox">
+                <img src="storage/img/placeYourImageHereGaleria0.png" alt="">
+                <img src="storage/img/placeYourImageHereGaleria1.png" alt="">
+                <img src="storage/img/placeYourImageHereGaleria2.png" alt="">
+                <img src="storage/img/placeYourImageHereGaleria3.png" alt="">
+                <img src="storage/img/placeYourImageHereGaleria4.png" alt="">
+                <img src="storage/img/placeYourImageHereGaleria5.png" alt="">
+            </div>
+        </main>
+    </div>
+    <div class="page4">
+        <div class="text">
+            <h3>Enjoy Our Food</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi possimus, fugit, deserunt voluptatum
+                ipsum officiis, doloribus repudiandae eos sequi mollitia nobis temporibus reiciendis suscipit distinctio
+                quibusdam doloremque ut rem aut.</p>
+        </div>
+    </div>
+    <div class="page5">
+        <header>
+            <h3>Our Menu</h3>
+        </header>
+        <main>
+            <div class="card1">
+                <div class="img"></div>
+                <p>ITALIAN SOURCE MUSHROOM</p>
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
+                    cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque explicabo ad iste.
+                    Perspiciatis, a vitae.</P>
+                <p>Price: $12.00</p>
+                <div class="card1">
+                    <div class="img"><img src="storage/img/placeYourImageHereMenu0.png" alt=""></div>
+                    <p>ITALIAN SOURCE MUSHROOM</p>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
+                        cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque explicabo ad
+                        iste.
+                        Perspiciatis, a vitae.</P>
+                    <p>Price: $12.00</p>
+                    <div class="card2">
+                        <div class="img"><img src="storage/img/placeYourImageHereMenu1.png" alt=""></div>
+                        <p>ITALIAN SOURCE MUSHROOM</p>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
+                            cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque explicabo
+                            ad iste.
+                            Perspiciatis, a vitae.</P>
+                        <p>Price: $12.00</p>
+                        <div class="card3">
+                            <div class="img"><img src="storage/img/placeYourImageHereMenu2.png" alt=""></div>
+                            <p>ITALIAN SOURCE MUSHROOM</p>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo
+                                sit
+                                cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque
+                                explicabo ad iste.
+                                Perspiciatis, a vitae.</P>
+                            <p>Price: $12.00</p>
+                        </div>
+        </main>
+    </div>
+    <div class="page6">
+        <header>
+            <div class="img"><img src="storage/img/placeYourImageHere5.png" alt=""></div>
+            <h3>Enjoy Best Meal</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus alias hic reiciendis consequatur
+                cupiditate impedit eligendi vero ducimus quasi aperiam consectetur unde maxime, non illo odio tenetur
+                earum in neque!</p>
+        </header>
+        <footer>
+            <div class="logo2"></div>
+            <div class="footermenu">
+                <p>HOME</p>
+                <p>ABOUT US</p>
+                <p>SERVICES</p>
+                <p>FOODS</p>
+                <p>CONTACT</p>
+                <p>LOCATION</p>
+            </div>
+            <div class="icons">
+                <i class='bx bxl-facebook-circle' ></i>
+                <i class='bx bxl-twitter'></i>
+                <i class='bx bxl-instagram-alt' ></i>
+                <i class='bx bxl-pinterest'></i>
+            </div>   
+        </footer>
+    </div>
+
 </body>
+
 </html>
