feat: :construction: Trabajo en progreso

--- a/index.html
+++ b/index.html
@@ -14,19 +14,25 @@
     <div class="page1">
         <header>
             <div class="menu">
-                <p>home</p>
-                <p>about</p>
-                <p>menus</p>
-                <p>offers</p>
+                <div class="part1">
+                    <p>home</p>
+                    <p>about</p>
+                    <p>menus</p>
+                    <p>offers</p>
+                </div>
+
                 <div class="logo">
                     <img src="storage/img/logo.png" alt="logo">
                 </div>
-                <p>gallery</p>
-                <p>contact</p>
-                <p>blog</p>
+                <div class="part2">
+                    <p>gallery</p>
+                    <p>contact</p>
+                    <p>blog</p>
+                </div>
             </div>
         </header>
         <main>
+            <img src="storage/img/placeYourImageHere0.png" alt="">
             <div class="img"><img src="storage/img/placeYourImageHere1.png" alt=""></div>
             <div class="contain">
                 <h2>Contact Us For Best Breakfast</h2>
