feat: :construction: Se sigue trabajando en la implementacion.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="storage/img/logo.png" type="image/png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap')
+    </style> -->
+
 </head>
 
 <body>
@@ -31,11 +35,11 @@
                 </div>
             </div>
         </header>
-        <main>
-            <img src="storage/img/placeYourImageHere0.png" alt="">
+        <div class="back"><img src="storage/img/placeYourImageHere0.png" alt=""></div>
+        <main>   
             <div class="img"><img src="storage/img/placeYourImageHere1.png" alt=""></div>
             <div class="contain">
-                <h2>Contact Us For Best Breakfast</h2>
+                <h1>Contact Us For Best Breakfast</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium harum odio deserunt earum amet
                     at animi voluptatem quo! In rerum explicabo, vero debitis magnam neque sit non voluptate saepe modi!
                     Minima alias vitae deserunt iusto velit quae, adipisci a cupiditate totam quas corrupti impedit
@@ -151,11 +155,11 @@
                 <p>LOCATION</p>
             </div>
             <div class="icons">
-                <i class='bx bxl-facebook-circle' ></i>
+                <i class='bx bxl-facebook-circle'></i>
                 <i class='bx bxl-twitter'></i>
-                <i class='bx bxl-instagram-alt' ></i>
+                <i class='bx bxl-instagram-alt'></i>
                 <i class='bx bxl-pinterest'></i>
-            </div>   
+            </div>
         </footer>
     </div>
 
