fix: :adhesive_bandage: Correccion a la estructura

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                     distinctio sapiente hic nesciunt amet?</p>
             </div>
         </div>
+    </div>
+    <div class="page3">
         <div class="box2">
             <div class="img"><img src="storage/img/placeYourImageHereFood0.png" alt=""></div>
             <div class="text">
@@ -72,7 +74,7 @@
             <div class="img2"><img src="storage/img/placeYourImageHereFood3.png" alt=""></div>
         </div>
     </div>
-    <div class="page3">
+    <div class="page4">
         <header>
             <h3>Our Food Gallery</h3>
         </header>
@@ -87,7 +89,7 @@
             </div>
         </main>
     </div>
-    <div class="page4">
+    <div class="page5">
         <div class="text">
             <h3>Enjoy Our Food</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi possimus, fugit, deserunt voluptatum
