--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="storage/img/logo.png" type="image/png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-     <style>
+    <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
     </style>
 </head>
@@ -18,24 +18,24 @@
         <header>
             <div class="menu">
                 <div class="part1">
-                    <p>home</p>
-                    <p>about</p>
-                    <p>menus</p>
-                    <p>offers</p>
+                    <a href="#">home</a>
+                    <a href="#page2">about</a>
+                    <a href="#page6">menus</a>
+                    <a href="#">offers</a>
                 </div>
 
                 <div class="logo">
                     <img src="storage/img/logo.png" alt="logo">
                 </div>
                 <div class="part2">
-                    <p>gallery</p>
-                    <p>contact</p>
-                    <p>blog</p>
+                    <a href="#page4">gallery</a>
+                    <a href="#page7">contact</a>
+                    <a href="#">blog</a>
                 </div>
             </div>
         </header>
         <div class="back"><img src="storage/img/placeYourImageHere0.png" alt=""></div>
-        <main>   
+        <main>
             <div class="img"><img src="storage/img/placeYourImageHere1.png" alt=""></div>
             <div class="contain">
                 <h1>Contact Us For Best Breakfast</h1>
@@ -47,7 +47,7 @@
             </div>
         </main>
     </div>
-    <div class="page2">
+    <div class="page2" id="page2">
         <div class="box1">
             <div class="img"><img src="storage/img/placeYourImageHereGaleria0.png" alt=""></div>
             <div class="text">
@@ -58,7 +58,7 @@
             </div>
         </div>
     </div>
-    <div class="page3">
+    <div class="page3" id="page3">
         <div class="box2">
             <div class="img"><img src="storage/img/placeYourImageHereFood0.png" alt=""></div>
             <div class="text">
@@ -74,7 +74,7 @@
             <div class="img2"><img src="storage/img/placeYourImageHereFood3.png" alt=""></div>
         </div>
     </div>
-    <div class="page4">
+    <div class="page4" id="page4">
         <header>
             <h3>Our Food Gallery</h3>
         </header>
@@ -89,7 +89,7 @@
             </div>
         </main>
     </div>
-    <div class="page5">
+    <div class="page5" id="page5">
         <div class="text">
             <h3>Enjoy Our Food</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi possimus, fugit, deserunt voluptatum
@@ -97,47 +97,40 @@
                 quibusdam doloremque ut rem aut.</p>
         </div>
     </div>
-    <div class="page6">
+    <div class="page6" id="page6">
         <header>
             <h3>Our Menu</h3>
         </header>
         <main>
-            <div class="card1">
-                <div class="img"></div>
-                <p>ITALIAN SOURCE MUSHROOM</p>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
+            <div class="card0">
+                <div class="img"><img src="storage/img/placeYourImageHereMenu0.png" alt=""></div>
+                <p class="subtitle">ITALIAN SOURCE MUSHROOM</p>
+                <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
                     cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque explicabo ad iste.
                     Perspiciatis, a vitae.</P>
-                <p>Price: $12.00</p>
-                <div class="card1">
-                    <div class="img"><img src="storage/img/placeYourImageHereMenu0.png" alt=""></div>
-                    <p>ITALIAN SOURCE MUSHROOM</p>
-                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
-                        cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque explicabo ad
-                        iste.
-                        Perspiciatis, a vitae.</P>
-                    <p>Price: $12.00</p>
-                    <div class="card2">
-                        <div class="img"><img src="storage/img/placeYourImageHereMenu1.png" alt=""></div>
-                        <p>ITALIAN SOURCE MUSHROOM</p>
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
-                            cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque explicabo
-                            ad iste.
-                            Perspiciatis, a vitae.</P>
-                        <p>Price: $12.00</p>
-                        <div class="card3">
-                            <div class="img"><img src="storage/img/placeYourImageHereMenu2.png" alt=""></div>
-                            <p>ITALIAN SOURCE MUSHROOM</p>
-                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo
-                                sit
-                                cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque
-                                explicabo ad iste.
-                                Perspiciatis, a vitae.</P>
-                            <p>Price: $12.00</p>
-                        </div>
+                <p class="price">Price: $12.00</p>
+            </div>
+            <div class="card1">
+                <div class="img"><img src="storage/img/placeYourImageHereMenu1.png" alt=""></div>
+                <p class="subtitle">ITALIAN SOURCE MUSHROOM</p>
+                <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
+                    cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque explicabo ad
+                    iste.
+                    Perspiciatis, a vitae.</P>
+                <p class="price">Price: $12.00</p>
+            </div>
+            <div class="card2">
+                <div class="img"><img src="storage/img/placeYourImageHereMenu2.png" alt=""></div>
+                <p class="subtitle">ITALIAN SOURCE MUSHROOM</p>
+                <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
+                    cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque explicabo
+                    ad iste.
+                    Perspiciatis, a vitae.</P>
+                <p class="price">Price: $12.00</p>
+            </div>
         </main>
     </div>
-    <div class="page7">
+    <div class="page7" id="page7">
         <header>
             <div class="img"><img src="storage/img/placeYourImageHere5.png" alt=""></div>
             <h3>Enjoy Best Meal</h3>
