feat: :construction: Se sigue trabajando en la pagina.
Se sigue trabajando en el estilizado de la pagina 7 y 3

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
             <div class="card0">
                 <div class="img"><img src="storage/img/placeYourImageHereMenu0.png" alt=""></div>
                 <p class="subtitle">ITALIAN SOURCE MUSHROOM</p>
-                <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
+                <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur
+                    nemo sit
                     cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque explicabo ad iste.
                     Perspiciatis, a vitae.</P>
                 <p class="price">Price: $12.00</p>
@@ -113,7 +114,8 @@
             <div class="card1">
                 <div class="img"><img src="storage/img/placeYourImageHereMenu1.png" alt=""></div>
                 <p class="subtitle">ITALIAN SOURCE MUSHROOM</p>
-                <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
+                <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur
+                    nemo sit
                     cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque explicabo ad
                     iste.
                     Perspiciatis, a vitae.</P>
@@ -122,7 +124,8 @@
             <div class="card2">
                 <div class="img"><img src="storage/img/placeYourImageHereMenu2.png" alt=""></div>
                 <p class="subtitle">ITALIAN SOURCE MUSHROOM</p>
-                <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur nemo sit
+                <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem quas tenetur
+                    nemo sit
                     cupiditate nulla laboriosam rerum earum asperiores labore, distinctio quis. Atque explicabo
                     ad iste.
                     Perspiciatis, a vitae.</P>
@@ -131,12 +134,16 @@
         </main>
     </div>
     <div class="page7" id="page7">
+        <div class="img"><img src="storage/img/placeYourImageHere5.png" alt=""></div>
         <header>
-            <div class="img"><img src="storage/img/placeYourImageHere5.png" alt=""></div>
-            <h3>Enjoy Best Meal</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus alias hic reiciendis consequatur
-                cupiditate impedit eligendi vero ducimus quasi aperiam consectetur unde maxime, non illo odio tenetur
-                earum in neque!</p>
+            <div class="text">
+                <h3>Enjoy Best Meal</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus alias hic reiciendis consequatur
+                    cupiditate impedit eligendi vero ducimus quasi aperiam consectetur unde maxime, non illo odio
+                    tenetur
+                    earum in neque!</p>
+            </div>
+
         </header>
         <footer>
             <div class="logo2"></div>
