feat: :sparkles: Se agrego el estilo a la pagina 7.
Se agrego el estilo de la pagina y se hicieron arreglos en el html en este apartado.

--- a/index.html
+++ b/index.html
@@ -143,17 +143,16 @@
                     tenetur
                     earum in neque!</p>
             </div>
-
         </header>
         <footer>
-            <div class="logo2"></div>
+            <div class="logo2"><img src="storage/img/logo2.png" alt=""></div>
             <div class="footermenu">
-                <p>HOME</p>
-                <p>ABOUT US</p>
-                <p>SERVICES</p>
-                <p>FOODS</p>
-                <p>CONTACT</p>
-                <p>LOCATION</p>
+                <a href="">HOME</a>
+                <a href="">ABOUT US</a>
+                <a href="">SERVICES</a>
+                <a href="">FOODS</a>
+                <a href="">CONTACT</a>
+                <a href="">LOCATION</a>
             </div>
             <div class="icons">
                 <i class='bx bxl-facebook-circle'></i>
