--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </div>
     </div>
     <div class="page3" id="page3">
+        <div class="back"><img src="storage/img/placeYourImageHereFood.png" alt=""></div>
         <div class="box2">
             <div class="img"><img src="storage/img/placeYourImageHereFood0.png" alt=""></div>
             <div class="text">
